--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ body {
   margin: 4em;
 }
 
-.deck {
+.cards {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,7 +35,8 @@ body {
   gap: 1em;
 }
 
-.card {
+.deck,
+.inplay {
   width: 8em;
   height: 10em;
   background-color: #ffffff;
