--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,7 @@ body {
 
 .header {
     margin: 4em;
+    letter-spacing: 0.5em;
 }
 
 .cards {
@@ -34,3 +35,7 @@ body {
     border-radius: 0.25em;
     margin: 1em;
   }
+
+.deck {
+    background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
+}
