--- a/styles/main.scss
+++ b/styles/main.scss
@@ -39,3 +39,12 @@ body {
 .deck {
     background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
 }
+
+.points {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1em;
+    align-items: center;
+    height: 10vh;
+    font-size: 1.5em;
+}
