Added CreateCardElement function and need to fix "appendChild"

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,8 +26,11 @@ body {
     gap: 1em;
 }
 
-.deck,
-.inplay {
+#deck1,
+#deck2,
+#inplay1,
+#inplay2 {
+    position: relative;
     width: 8em;
     height: 10em;
     background-color: #ffffff;
@@ -36,9 +39,10 @@ body {
     margin: 1em;
   }
 
-.deck {
-    background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
-}
+// #deck1, 
+// #deck2 {
+//     background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
+// }
 
 .points {
     display: flex;
@@ -47,4 +51,9 @@ body {
     align-items: center;
     height: 10vh;
     font-size: 1.5em;
+}
+
+.card {
+    position: absolute;
+    background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
 }
