--- a/styles/main.css
+++ b/styles/main.css
@@ -36,8 +36,11 @@ body {
   gap: 1em;
 }
 
-.deck,
-.inplay {
+#deck1,
+#deck2,
+#inplay1,
+#inplay2 {
+  position: relative;
   width: 8em;
   height: 10em;
   background-color: #ffffff;
@@ -45,10 +48,6 @@ body {
           box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
   border-radius: 0.25em;
   margin: 1em;
-}
-
-.deck {
-  background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
 }
 
 .points {
@@ -64,5 +63,10 @@ body {
           align-items: center;
   height: 10vh;
   font-size: 1.5em;
+}
+
+.card {
+  position: absolute;
+  background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
 }
 /*# sourceMappingURL=main.css.map */
