--- a/styles/main.css
+++ b/styles/main.css
@@ -68,5 +68,11 @@ body {
 .card {
   position: absolute;
   background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
+  width: 8em;
+  height: 10em;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
+  border-radius: 0.25em;
 }
 /*# sourceMappingURL=main.css.map */
