--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,7 +23,7 @@ body {
 .cards {
     display: flex;
     justify-content: center;
-    gap: 1em;
+    gap: 2em;
 }
 
 #deck1,
@@ -31,18 +31,10 @@ body {
 #inplay1,
 #inplay2 {
     position: relative;
-    width: 8em;
-    height: 10em;
-    background-color: #ffffff;
-    box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
-    border-radius: 0.25em;
-    margin: 1em;
+    width: 10em;
+    height: 12em;
+    background-color: #eee;
   }
-
-// #deck1, 
-// #deck2 {
-//     background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
-// }
 
 .points {
     display: flex;
@@ -56,16 +48,17 @@ body {
 .card {
     position: absolute;
     background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
-    width: 8em;
-    height: 10em;
-    background-color: #ffffff;
+    width: 10em;
+    height: 12em;
+    background-color: #eee;
     box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
     border-radius: 0.25em;
 }
 
 .inplaycard {
     position: absolute;
-    background-size: cover;
-    width: 8em;
-    height: 10em;
+    object-fit: cover;
+    width:10em;
+    height:12em;
+    display: block;
 }
