--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,7 +23,8 @@ body {
 .cards {
     display: flex;
     justify-content: center;
-    gap: 2em;
+    gap: 1.5em;
+    margin-bottom: 4em;
 }
 
 #deck1,
@@ -31,7 +32,7 @@ body {
 #inplay1,
 #inplay2 {
     position: relative;
-    width: 10em;
+    width: 8em;
     height: 12em;
     background-color: #eee;
   }
@@ -48,8 +49,8 @@ body {
 .card {
     position: absolute;
     background-image: url("http://www.brainjar.com/css/cards/graphics/cardback.gif");
-    width: 10em;
-    height: 12em;
+    width: 7.5em;
+    height: 10em;
     background-color: #eee;
     box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.15);
     border-radius: 0.25em;
@@ -57,8 +58,8 @@ body {
 
 .inplaycard {
     position: absolute;
-    object-fit: cover;
-    width:10em;
-    height:12em;
-    display: block;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 7.5em;
+    height: 10em;
 }
