--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ body {
   background-color: #eee;
 }
 
-.points {
+#score {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -59,7 +59,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   height: 10vh;
-  font-size: 1.5em;
+  font-size: 3em;
 }
 
 .card {
