--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,13 +37,13 @@ body {
     background-color: #eee;
 }
 
-.points {
+#score {
     display: flex;
     justify-content: center;
     margin-bottom: 1em;
     align-items: center;
     height: 10vh;
-    font-size: 1.5em;
+    font-size: 3em;
 }
 
 .card {
